--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
     <nav class="nav-bar">
       <ul class="icons">
-        <li><a href=""><i class="fas fa-home"></i></a></li>
-        <li><a href=""><i class="fas fa-border-all"></i></a></li>
-        <li><a href=""><i class="fas far fa-list-alt"></i></a></li>
+        <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="timetable.html"><i class="fas fa-border-all"></i></a></li>
+        <li><a href="bulletin.html"><i class="fas far fa-list-alt"></i></a></li>
         <li><a href=""><i class="fas fa-bell"></i></a></li>
         <li><a href=""><i class="fas fa-circle-notch"></i></a></li>
       </ul>
